--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title> CFDM FOSIS </title> 
 <link href="estilo.css" rel="stylesheet" type="text/css">                           
 </head>
-<body bgcolor="#F9E79F">
+<body bgcolor="#FFEB3B">
 <CENTER>
 <h1><font color="#E74C3C"> CFDM FOSIS
  </font> </h1>
