--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media
 
 <table border="4">
 <tr>
-<td><p> <font size="6" color="#E74C3C">en la foto mostramos una chef y en el video un tutorial de unos ricos postres de navidad</font></p>
+<td><p> <font size="6" color="#E74C3C">en la imagen mostramos una chef y en el video un tutorial de unos ricos postres navideños</font></p>
            </td><td><img src="chef.jpg" width="425" height="315"></td><td><p> <font size="6" color="#E74C3C">en la foto mostramos una chef y en el video un tutorial de unos ricos postres de navidad</font></p>
          
  </td>
